--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://github.com/jonschlinkert/boilerplate",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/boilerplate",
+  "bugs": {
+    "url": "https://github.com/jonschlinkert/boilerplate/issues"
+  },
   "license": "MIT",
   "files": [
     "index.js"
@@ -19,17 +22,31 @@
   "dependencies": {
     "base-methods": "^0.2.1",
     "delegate-properties": "^0.2.1",
-    "expand-target": "^0.2.0",
     "export-files": "^2.1.0",
     "lazy-cache": "^0.2.3",
     "look-up": "^0.7.1",
     "mixin-deep": "^1.1.3",
+    "object.pick": "^1.1.1",
     "to-object-path": "^0.1.0"
   },
   "devDependencies": {
-    "engine": "^0.1.6",
+    "gulp": "^3.9.0",
+    "gulp-istanbul": "^0.10.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-mocha": "^2.1.3",
+    "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.0",
     "should": "^7.1.0"
   },
-  "keywords": []
+  "keywords": [],
+  "verb": {
+    "related": {
+      "list": [
+        "boilerplate",
+        "assemble",
+        "template",
+        "scaffold"
+      ]
+    }
+  }
 }
