--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "gulp-mocha": "^2.1.3",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.0",
-    "should": "^7.1.0"
+    "should": "^7.1.0",
+    "stringify-object": "jonschlinkert/stringify-object"
   },
   "keywords": [
     "app",
