--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "license": "MIT",
   "files": [
-    "index.js"
+    "index.js",
+    "utils.js"
   ],
   "main": "index.js",
   "engines": {
@@ -20,21 +21,24 @@
     "test": "mocha"
   },
   "dependencies": {
-    "base": "^0.11.0",
+    "base": "^0.11.1",
     "base-plugins": "^0.4.13",
     "define-property": "^0.2.5",
-    "expand-target": "^0.6.3",
+    "expand-target": "^0.6.4",
     "expand-utils": "^0.2.1",
-    "scaffold": "^0.2.7"
+    "is-scaffold": "^0.1.1",
+    "lazy-cache": "^2.0.1",
+    "mixin-deep": "^1.1.3",
+    "scaffold": "^0.2.8"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^1.1.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-format-md": "^0.1.9",
-    "gulp-istanbul": "^0.10.3",
+    "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
-    "mocha": "^2.4.5",
-    "should": "^8.3.1"
+    "mocha": "^2.5.3",
+    "should": "^9.0.2"
   },
   "keywords": [
     "app",
@@ -96,8 +100,8 @@
       "gulp",
       "metalsmith",
       "verb",
-      "yeoman",
-      "verb-readme-generator"
+      "verb-readme-generator",
+      "yeoman"
     ],
     "lint": {
       "reflinks": true
